@@ -32,6 +32,7 @@ Changes from 0.13.0
    * try form now possible in defmacro/deftag
    * Fixed a crash when `with` suppresses an exception. `with` now returns
      `None` in this case.
+   * `assoc` now evaluates its arguments only once each
 
    [ Misc. Improvements ]
    * `read`, `read_str`, and `eval` are exposed and documented as top-level
